qt/multimedia/gen_qradiotuner.nim


proc fcQRadioTuner_new(): ptr cQRadioTuner {.importc: "QRadioTuner_new".}
proc fcQRadioTuner_new2(parent: pointer): ptr cQRadioTuner {.importc: "QRadioTuner_new2".}
proc fcQRadioTuner_metaObject(self: pointer, ): pointer {.importc: "QRadioTuner_metaObject".}
proc fcQRadioTuner_metacast(self: pointer, param1: cstring): pointer {.importc: "QRadioTuner_metacast".}
proc fcQRadioTuner_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QRadioTuner_metacall".}
proc fcQRadioTuner_tr(s: cstring): struct_miqt_string {.importc: "QRadioTuner_tr".}
proc fcQRadioTuner_trUtf8(s: cstring): struct_miqt_string {.importc: "QRadioTuner_trUtf8".}
proc fcQRadioTuner_availability(self: pointer, ): cint {.importc: "QRadioTuner_availability".}
proc fcQRadioTuner_state(self: pointer, ): cint {.importc: "QRadioTuner_state".}
proc fcQRadioTuner_band(self: pointer, ): cint {.importc: "QRadioTuner_band".}
proc fcQRadioTuner_isBandSupported(self: pointer, b: cint): bool {.importc: "QRadioTuner_isBandSupported".}
proc fcQRadioTuner_frequency(self: pointer, ): cint {.importc: "QRadioTuner_frequency".}
proc fcQRadioTuner_frequencyStep(self: pointer, band: cint): cint {.importc: "QRadioTuner_frequencyStep".}
proc fcQRadioTuner_frequencyRange(self: pointer, band: cint): struct_miqt_map {.importc: "QRadioTuner_frequencyRange".}
proc fcQRadioTuner_isStereo(self: pointer, ): bool {.importc: "QRadioTuner_isStereo".}
proc fcQRadioTuner_setStereoMode(self: pointer, mode: cint): void {.importc: "QRadioTuner_setStereoMode".}
proc fcQRadioTuner_stereoMode(self: pointer, ): cint {.importc: "QRadioTuner_stereoMode".}
proc fcQRadioTuner_signalStrength(self: pointer, ): cint {.importc: "QRadioTuner_signalStrength".}
proc fcQRadioTuner_volume(self: pointer, ): cint {.importc: "QRadioTuner_volume".}
proc fcQRadioTuner_isMuted(self: pointer, ): bool {.importc: "QRadioTuner_isMuted".}
proc fcQRadioTuner_isSearching(self: pointer, ): bool {.importc: "QRadioTuner_isSearching".}
proc fcQRadioTuner_isAntennaConnected(self: pointer, ): bool {.importc: "QRadioTuner_isAntennaConnected".}
proc fcQRadioTuner_error(self: pointer, ): cint {.importc: "QRadioTuner_error".}
proc fcQRadioTuner_errorString(self: pointer, ): struct_miqt_string {.importc: "QRadioTuner_errorString".}
proc fcQRadioTuner_radioData(self: pointer, ): pointer {.importc: "QRadioTuner_radioData".}
proc fcQRadioTuner_searchForward(self: pointer, ): void {.importc: "QRadioTuner_searchForward".}
proc fcQRadioTuner_searchBackward(self: pointer, ): void {.importc: "QRadioTuner_searchBackward".}
proc fcQRadioTuner_searchAllStations(self: pointer, ): void {.importc: "QRadioTuner_searchAllStations".}
proc fcQRadioTuner_cancelSearch(self: pointer, ): void {.importc: "QRadioTuner_cancelSearch".}
proc fcQRadioTuner_setBand(self: pointer, band: cint): void {.importc: "QRadioTuner_setBand".}
proc fcQRadioTuner_setFrequency(self: pointer, frequency: cint): void {.importc: "QRadioTuner_setFrequency".}
proc fcQRadioTuner_setVolume(self: pointer, volume: cint): void {.importc: "QRadioTuner_setVolume".}
proc fcQRadioTuner_setMuted(self: pointer, muted: bool): void {.importc: "QRadioTuner_setMuted".}
proc fcQRadioTuner_start(self: pointer, ): void {.importc: "QRadioTuner_start".}
proc fcQRadioTuner_stop(self: pointer, ): void {.importc: "QRadioTuner_stop".}
proc fcQRadioTuner_stateChanged(self: pointer, state: cint): void {.importc: "QRadioTuner_stateChanged".}
proc fQRadioTuner_connect_stateChanged(self: pointer, slot: int) {.importc: "QRadioTuner_connect_stateChanged".}
proc fcQRadioTuner_bandChanged(self: pointer, band: cint): void {.importc: "QRadioTuner_bandChanged".}
proc fQRadioTuner_connect_bandChanged(self: pointer, slot: int) {.importc: "QRadioTuner_connect_bandChanged".}
proc fcQRadioTuner_frequencyChanged(self: pointer, frequency: cint): void {.importc: "QRadioTuner_frequencyChanged".}
proc fQRadioTuner_connect_frequencyChanged(self: pointer, slot: int) {.importc: "QRadioTuner_connect_frequencyChanged".}
proc fcQRadioTuner_stereoStatusChanged(self: pointer, stereo: bool): void {.importc: "QRadioTuner_stereoStatusChanged".}
proc fQRadioTuner_connect_stereoStatusChanged(self: pointer, slot: int) {.importc: "QRadioTuner_connect_stereoStatusChanged".}
proc fcQRadioTuner_searchingChanged(self: pointer, searching: bool): void {.importc: "QRadioTuner_searchingChanged".}
proc fQRadioTuner_connect_searchingChanged(self: pointer, slot: int) {.importc: "QRadioTuner_connect_searchingChanged".}
proc fcQRadioTuner_signalStrengthChanged(self: pointer, signalStrength: cint): void {.importc: "QRadioTuner_signalStrengthChanged".}
proc fQRadioTuner_connect_signalStrengthChanged(self: pointer, slot: int) {.importc: "QRadioTuner_connect_signalStrengthChanged".}
proc fcQRadioTuner_volumeChanged(self: pointer, volume: cint): void {.importc: "QRadioTuner_volumeChanged".}
proc fQRadioTuner_connect_volumeChanged(self: pointer, slot: int) {.importc: "QRadioTuner_connect_volumeChanged".}
proc fcQRadioTuner_mutedChanged(self: pointer, muted: bool): void {.importc: "QRadioTuner_mutedChanged".}
proc fQRadioTuner_connect_mutedChanged(self: pointer, slot: int) {.importc: "QRadioTuner_connect_mutedChanged".}
proc fcQRadioTuner_stationFound(self: pointer, frequency: cint, stationId: struct_miqt_string): void {.importc: "QRadioTuner_stationFound".}
proc fQRadioTuner_connect_stationFound(self: pointer, slot: int) {.importc: "QRadioTuner_connect_stationFound".}
proc fcQRadioTuner_antennaConnectedChanged(self: pointer, connectionStatus: bool): void {.importc: "QRadioTuner_antennaConnectedChanged".}
proc fQRadioTuner_connect_antennaConnectedChanged(self: pointer, slot: int) {.importc: "QRadioTuner_connect_antennaConnectedChanged".}
proc fcQRadioTuner_errorWithError(self: pointer, error: cint): void {.importc: "QRadioTuner_errorWithError".}
proc fQRadioTuner_connect_errorWithError(self: pointer, slot: int) {.importc: "QRadioTuner_connect_errorWithError".}
proc fcQRadioTuner_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QRadioTuner_tr2".}
proc fcQRadioTuner_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRadioTuner_tr3".}
proc fcQRadioTuner_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QRadioTuner_trUtf82".}
proc fcQRadioTuner_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRadioTuner_trUtf83".}
proc fcQRadioTuner_searchAllStations1(self: pointer, searchMode: cint): void {.importc: "QRadioTuner_searchAllStations1".}
proc fQRadioTuner_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QRadioTuner_virtualbase_metaObject".}
proc fcQRadioTuner_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_metaObject".}
proc fQRadioTuner_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QRadioTuner_virtualbase_metacast".}
proc fcQRadioTuner_override_virtual_metacast(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_metacast".}
proc fQRadioTuner_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QRadioTuner_virtualbase_metacall".}
proc fcQRadioTuner_override_virtual_metacall(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_metacall".}
proc fQRadioTuner_virtualbase_availability(self: pointer, ): cint{.importc: "QRadioTuner_virtualbase_availability".}
proc fcQRadioTuner_override_virtual_availability(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_availability".}
proc fQRadioTuner_virtualbase_isAvailable(self: pointer, ): bool{.importc: "QRadioTuner_virtualbase_isAvailable".}
proc fcQRadioTuner_override_virtual_isAvailable(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_isAvailable".}
proc fQRadioTuner_virtualbase_service(self: pointer, ): pointer{.importc: "QRadioTuner_virtualbase_service".}
proc fcQRadioTuner_override_virtual_service(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_service".}
proc fQRadioTuner_virtualbase_bind(self: pointer, param1: pointer): bool{.importc: "QRadioTuner_virtualbase_bind".}
proc fcQRadioTuner_override_virtual_bindX(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_bind".}
proc fQRadioTuner_virtualbase_unbind(self: pointer, param1: pointer): void{.importc: "QRadioTuner_virtualbase_unbind".}
proc fcQRadioTuner_override_virtual_unbind(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_unbind".}
proc fQRadioTuner_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QRadioTuner_virtualbase_event".}
proc fcQRadioTuner_override_virtual_event(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_event".}
proc fQRadioTuner_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QRadioTuner_virtualbase_eventFilter".}
proc fcQRadioTuner_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_eventFilter".}
proc fQRadioTuner_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QRadioTuner_virtualbase_timerEvent".}
proc fcQRadioTuner_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_timerEvent".}
proc fQRadioTuner_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QRadioTuner_virtualbase_childEvent".}
proc fcQRadioTuner_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_childEvent".}
proc fQRadioTuner_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QRadioTuner_virtualbase_customEvent".}
proc fcQRadioTuner_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_customEvent".}
proc fQRadioTuner_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QRadioTuner_virtualbase_connectNotify".}
proc fcQRadioTuner_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_connectNotify".}
proc fQRadioTuner_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QRadioTuner_virtualbase_disconnectNotify".}
proc fcQRadioTuner_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QRadioTuner_override_virtual_disconnectNotify".}
proc fcQRadioTuner_staticMetaObject(): pointer {.importc: "QRadioTuner_staticMetaObject".}
proc fcQRadioTuner_delete(self: pointer) {.importc: "QRadioTuner_delete".}


func init*(T: type QRadioTuner, h: ptr cQRadioTuner): QRadioTuner =
  T(h: h)
proc create*(T: type QRadioTuner, ): QRadioTuner =

  QRadioTuner.init(fcQRadioTuner_new())
proc create*(T: type QRadioTuner, parent: gen_qobject.QObject): QRadioTuner =

  QRadioTuner.init(fcQRadioTuner_new2(parent.h))
proc metaObject*(self: QRadioTuner, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQRadioTuner_metaObject(self.h))

proc metacast*(self: QRadioTuner, param1: cstring): pointer =

  fcQRadioTuner_metacast(self.h, param1)

proc metacall*(self: QRadioTuner, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQRadioTuner_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QRadioTuner, s: cstring): string =

  let v_ms = fcQRadioTuner_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QRadioTuner, s: cstring): string =

  let v_ms = fcQRadioTuner_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc availability*(self: QRadioTuner, ): gen_qmultimedia.QMultimediaAvailabilityStatus =

  gen_qmultimedia.QMultimediaAvailabilityStatus(fcQRadioTuner_availability(self.h))

proc state*(self: QRadioTuner, ): QRadioTunerState =

  QRadioTunerState(fcQRadioTuner_state(self.h))

proc band*(self: QRadioTuner, ): QRadioTunerBand =

  QRadioTunerBand(fcQRadioTuner_band(self.h))
